// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sales channels DELETE /admin/sales-channels/:id should delete the requested sales channel 1`] = `
Object {
  "deleted": true,
  "id": Any<String>,
  "object": "sales-channel",
}
`;

exports[`sales channels GET /admin/orders/:id expands sales channel for single 1`] = `
Object {
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "test description",
  "id": Any<String>,
  "is_disabled": false,
  "name": "test name",
  "updated_at": Any<String>,
}
`;

exports[`sales channels GET /admin/orders?expand=sales_channels expands sales channel with parameter 1`] = `
Object {
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "test description",
  "id": Any<String>,
  "is_disabled": false,
  "name": "test name",
  "updated_at": Any<String>,
}
`;

exports[`sales channels GET /admin/sales-channels should list the sales channel using free text search 1`] = `
Object {
  "count": 1,
  "limit": 20,
  "offset": 0,
  "sales_channels": ArrayContaining [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "description": "test description 2",
      "id": Any<String>,
      "is_disabled": false,
      "name": "test name 2",
      "updated_at": Any<String>,
    },
  ],
}
`;

exports[`sales channels GET /admin/sales-channels should list the sales channel using properties filters 1`] = `
Object {
  "count": 1,
  "limit": 20,
  "offset": 0,
  "sales_channels": ArrayContaining [
    Object {
      "created_at": Any<String>,
      "deleted_at": null,
      "description": "test description",
      "id": Any<String>,
      "is_disabled": false,
      "name": "test name",
      "updated_at": Any<String>,
    },
  ],
}
`;

exports[`sales channels GET /admin/sales-channels/:id should retrieve the requested sales channel 1`] = `
Object {
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "test description",
  "id": Any<String>,
  "is_disabled": false,
  "name": "test name",
  "updated_at": Any<String>,
}
`;

exports[`sales channels POST /admin/sales-channels successfully creates a disabled sales channel 1`] = `
Object {
  "sales_channel": ObjectContaining {
    "is_disabled": true,
    "name": "sales channel name",
  },
}
`;

exports[`sales channels POST /admin/sales-channels successfully creates a sales channel 1`] = `
Object {
  "sales_channel": ObjectContaining {
    "description": "sales channel description",
    "is_disabled": false,
    "name": "sales channel name",
  },
}
`;

exports[`sales channels POST /admin/sales-channels/:id updates sales channel properties 1`] = `
Object {
  "created_at": Any<String>,
  "deleted_at": null,
  "description": "updated description",
  "id": Any<String>,
  "is_disabled": true,
  "name": "updated name",
  "updated_at": Any<String>,
}
`;
